# rand

./: .gitignore  CMakeLists.txt  CMakeSettings.json  rand.sln  readme.md
Foundation/: CMakeLists.txt
Foundation/include/rand/: dice.h  rand.h
Foundation/rand/: rand.cpp
Foundation/tests/: CMakeLists.txt  pch.h  tests.cpp
rand/: rand.cpp  rand.h  rand.vcxproj  rand.vcxproj.filters
